feat(processor): very basic unit parsing